@@ -341,9 +341,10 @@ void print_pow::print_infix(std::ostream& str, exptree::iterator it)
 		str << "}";
 		}
 	else {
-		str << "**";
+		str << "**{";
 		++ch;
 		parent.get_printer(ch)->print_infix(str, ch);
+		str << "}";
 		}
 	}
 
