@@ -1,3 +1,9 @@
+2010-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed a bug in printing of \pow.
+
+	* Added setting for brains wired to windows Home/End keys.
+
 2010-03-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 1.22
